--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
   </head>
   <body>
     <h1>ムーンシャイン統合ページ</h1>
+    <p>このページはそれぞれのページへのリンクするページです。</p><br>
+    <a href="music">Moon Shine Music</a>
+    <a href="aiiro">藍色の道</a>
+    <a href="remaster">なんでも、好きなように。</a>
   </body>
 </html>
