--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE=html>
-<html>
+<html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title="MSSBGC Terminal">  
+    <title="MSSBGC Terminal">
+    <link rel="stylesheet" href="terminal.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>ムーンシャイン統合ページ</h1>
