--- a/remaster/index.html
+++ b/remaster/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title="なんでも、好きなように。">  
+    <title="なんでも、好きなように。">
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <h1>なんでも、好きなように。</h1>
