--- a/remaster/index.html
+++ b/remaster/index.html
@@ -9,7 +9,7 @@
     <h1>なんでも、好きなように。</h1>
     <h3>(このページは制作中です。)</h3><br>
     <p>このチャンネルは、主に音源を自分でリマスターしていますl</p><br>
-    <a href="https://www.youtube.com/channel/UCbijK48Pv3nu8-afmlEXeEQ">YouTubeのチャンネル</a><br>
+    <a class="ytl" href="https://www.youtube.com/channel/UCbijK48Pv3nu8-afmlEXeEQ">YouTubeのチャンネル</a><br>
     <p>「EQUALロマンス(リマスター済み)」</p><br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/j8wEpW7-GDo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
