--- a/remaster/index.html
+++ b/remaster/index.html
@@ -11,6 +11,6 @@
     <p>このチャンネルは、主に音源を自分でリマスターしていますl</p><br>
     <a class="ytl" href="https://www.youtube.com/channel/UCbijK48Pv3nu8-afmlEXeEQ">YouTubeのチャンネル</a><br>
     <p>「EQUALロマンス(リマスター済み)」</p><br>
-    <iframe width=30% src="https://www.youtube.com/embed/j8wEpW7-GDo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="400" height="400" src="https://www.youtube.com/embed/j8wEpW7-GDo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
 </html>
