--- a/remaster/index.html
+++ b/remaster/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title="なんでも、好きなように。">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>なんでも、好きなように。</h1>
