--- a/music/index.html
+++ b/music/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>MOON SHINE MUSIC</h1>
     <p>MOON SHINE MUSICの公式ページ</p><br>
-    <a href="https://www.youtube.com/channel/UC32UW1RHb8Jr2d5Q0CliVsQ">YouTubeチャンネル①</a>
-    <a href="https://www.youtube.com/channel/UCpq19ZKBMBf7jeu1cdAl8iQ">YouTubeチャンネル②</a>
+    <a class="ytl" href="https://www.youtube.com/channel/UC32UW1RHb8Jr2d5Q0CliVsQ">YouTubeチャンネル①</a>
+    <a class="ytl" href="https://www.youtube.com/channel/UCpq19ZKBMBf7jeu1cdAl8iQ">YouTubeチャンネル②</a>
   </body>
 </html>
