--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <a href="music">Moon Shine Music</a>
     <a href="aiiro">藍色の道</a>
     <a href="remaster">なんでも、好きなように。</a>
+    <p><center><font size="-1">[Last update: 2022/12/24]</font></center>
   </body>
 </html>
