--- a/ymo/index.html
+++ b/ymo/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title="YMOその他">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>YELLOW MAGIC ORCHESTRA</h1>
     <p>YMOなど</p><br>
     <h1>YMOが使っていたようなトラックシート</h1>
-    <a class="ytl" href="YMOTrackSheet202202032108.pdf">トラックシート(24トラック,PDF)</a>
+    <a href="YMOTrackSheet202202032108.pdf">トラックシート(24トラック,PDF)</a>
     </body><p><center><font size="-1">[Last update: 2022/12/24]</font></center>
 </html>
