--- a/music/index.html
+++ b/music/index.html
@@ -8,10 +8,12 @@
   <body>
     <h1>MOON SHINE MUSIC</h1>
     <p>MOON SHINE MUSICの公式ページ</p><br>
+    <h1>毎週作曲、やってます。</h1>
+    <p>Every Week GarageBand!! 進行中！</p>
     <h1><font color=red>新アルバム「不撓不屈」リリース！(2022/12/24)</font></h1>
     <a class="ytl" href="https://www.youtube.com/channel/UC32UW1RHb8Jr2d5Q0CliVsQ">YouTubeチャンネル①</a>
     <a class="ytl" href="https://www.youtube.com/channel/UCpq19ZKBMBf7jeu1cdAl8iQ">YouTubeチャンネル②</a>
-    <h2>おすすめ曲「中蕐󠄁勁(中華勁)」</h2>
-    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1386740596&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/garagebander-moonshine" title="Musician MOONSHINE" target="_blank" style="color: #cccccc; text-decoration: none;">Musician MOONSHINE</a> · <a href="https://soundcloud.com/garagebander-moonshine/china-groove" title="CHINA GROOVE" target="_blank" style="color: #cccccc; text-decoration: none;">CHINA GROOVE</a></div>
-  </body><p><center><font size="-1">[Last update: 2022/12/24]</font></center>
+    <h2>おすすめ曲「M-14」</h2>
+<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1659575814&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/garagebander-moonshine" title="Musician MOONSHINE" target="_blank" style="color: #cccccc; text-decoration: none;">Musician MOONSHINE</a> · <a href="https://soundcloud.com/garagebander-moonshine/ewgb-m-14" title="EWGB M - 14" target="_blank" style="color: #cccccc; text-decoration: none;">EWGB M - 14</a></div>
+  </body><p><center><font size="-1">[Last update: 2023/12/01]</font></center>
 </html>
