--- a/music/index.html
+++ b/music/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title="MSSBGC Music">
+    <title>MSSBGC Music</title>
     <link rel="stylesheet" href="../style.css">
   </head>
   <body>
@@ -10,6 +10,7 @@
     <p>MOON SHINE MUSICの公式ページ</p><br>
     <h1>毎週作曲、やってます。</h1>
     <p>Every Week GarageBand!! 進行中！</p>
+    <a class="ytl" href="https://www.youtube.com/watch?v=Rus65HaX1Vw&list=PLxDibdeB0fpdZO0ZovAkcSoNpiZZoXBrc&pp=iAQB">再生リスト</a>
     <h1><font color=red>新アルバム「不撓不屈」リリース！(2022/12/24)</font></h1>
     <a class="ytl" href="https://www.youtube.com/channel/UC32UW1RHb8Jr2d5Q0CliVsQ">YouTubeチャンネル①</a>
     <a class="ytl" href="https://www.youtube.com/channel/UCpq19ZKBMBf7jeu1cdAl8iQ">YouTubeチャンネル②</a>
