--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>ムーンシャイン綜合ページ</h1>
+    <h1>MOONSHINE綜合ページ</h1>
     <p>このページはそれぞれのページへのリンクするページです。</p><br>
     <a href="music">Moon Shine Music</a>
     <a href="aiiro">藍色の道</a>
     <a href="remaster">なんでも、好きなように。</a>
-    <p><center><font size="-1">[Last update: 2023/12/01]</font></center>
+    <br>
+    <a href="links">リンク集</a>
+    <p><center><font size="-1">[Last update: 2024/06/30]</font></center>
   </body>
 </html>
