--- a/links.html
+++ b/links.html
@@ -10,6 +10,7 @@
     <h1>MOONSHINEリンク集</h1>
     <p>このページにはそれぞれのサイトへの集めたよ。</p><br>
     <a href="https://youtube.com/@mssbmusic?si=mkZUmT7-zMZ5SF0F">とあるGarageBander</a>
+    <a href="https://youtube.com/@indigostreet?si=z1caIcOT5Ao526t_">藍色の道</a>
     <br>
     <p><center><font size="-1">[Last update: 2024/06/30]</font></center>
   </body>
