--- a/links.html
+++ b/links.html
@@ -11,6 +11,7 @@
     <p>このページにはそれぞれのサイトへの集めたよ。</p><br>
     <a href="https://youtube.com/@mssbmusic?si=mkZUmT7-zMZ5SF0F">とあるGarageBander</a>
     <a href="https://youtube.com/@indigostreet?si=z1caIcOT5Ao526t_">藍色の道</a>
+    <a href="https://x.com/MSSB_Music">Musician MOONSHINE (X)</a>
     <br>
     <p><center><font size="-1">[Last update: 2024/06/30]</font></center>
   </body>
