--- a/links.html
+++ b/links.html
@@ -12,6 +12,7 @@
     <a href="https://youtube.com/@mssbmusic?si=mkZUmT7-zMZ5SF0F">とあるGarageBander</a>
     <a href="https://youtube.com/@indigostreet?si=z1caIcOT5Ao526t_">藍色の道</a>
     <h2>MOONSHINE</h2>
+    <a href="https://www.nicovideo.jp/user/124287784/">ニコニコ動画</a>
     <a href="https://x.com/MSSB_Music">X</a>
     <a href="https://soundcloud.com/garagebander-moonshine">SoundCloud1</a>
     <a href="https://soundcloud.com/moonshine-887003277">SoundCloud2</a>
