--- a/links.html
+++ b/links.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>MOONSHINEリンク集</h1>
-    <p>このページにはそれぞれのサイトへの集めたよ。</p><br>
+    <p>このページにはそれぞれのサイトへのリンク集めたよ。</p><br>
     <a href="https://youtube.com/@mssbmusic?si=mkZUmT7-zMZ5SF0F">とあるGarageBander</a>
     <a href="https://youtube.com/@indigostreet?si=z1caIcOT5Ao526t_">藍色の道</a>
     <h2>MOONSHINE</h2>
