--- a/links.html
+++ b/links.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title="MSSBGC リンク集">
+    <title>MSSBGC リンク集</title>
     <link rel="stylesheet" href="terminal.css">
     <link rel="stylesheet" href="style.css">
   </head>
