--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title="MSSBGC Terminal">
+    <title>MSSBGC Terminal</title>
     <link rel="stylesheet" href="terminal.css">
     <link rel="stylesheet" href="style.css">
   </head>
