--- a/links.html
+++ b/links.html
@@ -9,7 +9,7 @@
   <body>
     <h1>MOONSHINEリンク集</h1>
     <p>このページにはそれぞれのサイトへのリンク集めたよ。</p><br>
-    <a href="https://youtube.com/@mssbmusic?si=mkZUmT7-zMZ5SF0F">とあるGarageBander</a>
+    <a href="https://www.youtube.com/channel/UC32UW1RHb8Jr2d5Q0CliVsQ">とあるGarageBander</a>
     <a href="https://youtube.com/@indigostreet?si=z1caIcOT5Ao526t_">藍色の道</a>
     <h2>MOONSHINE</h2>
     <a href="https://www.nicovideo.jp/user/124287784/">ニコニコ動画</a>
@@ -18,6 +18,6 @@
     <a href="https://soundcloud.com/moonshine-887003277">SoundCloud2</a>
     <a href="https://www.pixiv.net/users/79715144">Pixiv</a>
     <br>
-    <p><center><font size="-1">[Last update: 2024/06/30]</font></center>
+    <p><center><font size="-1">[Last update: 2025/04/16]</font></center>
   </body>
 </html>
